@@ -3,6 +3,7 @@ package com.myproject.api.config;
 import com.myproject.api.repositories.UserRepository;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -18,12 +19,10 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Collections;
 
-@Configuration 
-@EnableWebSecurity 
+@Configuration
+@EnableWebSecurity
 public class SecurityConfig {
 
     private final UserRepository userRepository;
@@ -32,64 +31,68 @@ public class SecurityConfig {
         this.userRepository = userRepository;
     }
 
-    // 1. BEAN: MÃ HÓA MẬT KHẨU (PasswordEncoder) - FIX LỖI THIẾU BEAN
+    // 1) PasswordEncoder
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    // 2. BEAN: Lấy thông tin User từ Database (Sử dụng email làm username)
+    // 2) Load user from DB
     @Bean
     public UserDetailsService userDetailsService() {
-        // Đảm bảo UserRepository có findByEmail(email) (như đã sửa)
         return email -> userRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
     }
 
-    // 3. BEAN: Cung cấp phương thức xác thực
+    // 3) AuthenticationProvider
     @Bean
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService());
-        authProvider.setPasswordEncoder(passwordEncoder()); // Sử dụng PasswordEncoder đã tạo
+        authProvider.setPasswordEncoder(passwordEncoder());
         return authProvider;
     }
 
-    // 4. BEAN: Quản lý xác thực (Authentication Manager)
+    // 4) AuthenticationManager
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
-    // 5. Cấu hình "Người bảo vệ" (Security Filter Chain)
+    // 5) Security Filter Chain
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // Cấu hình CORS
+            // ✅ CORS: allow all localhost ports in dev
             .cors(cors -> {
-                var source = new UrlBasedCorsConfigurationSource();
-                var corsConfig = new CorsConfiguration();
-                // Cho phép Frontend (Port 5500) truy cập
-                corsConfig.setAllowedOrigins(Arrays.asList("http://127.0.0.1:5500", "http://localhost:5500")); 
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                CorsConfiguration corsConfig = new CorsConfiguration();
+
+                corsConfig.setAllowedOriginPatterns(List.of(
+                        "http://localhost:*",
+                        "http://127.0.0.1:*"
+                ));
+
                 corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                corsConfig.setAllowedHeaders(Collections.singletonList("*"));
+                corsConfig.setAllowedHeaders(List.of("*"));
+                corsConfig.setExposedHeaders(List.of("*"));
                 corsConfig.setAllowCredentials(true);
+
                 source.registerCorsConfiguration("/**", corsConfig);
                 cors.configurationSource(source);
             })
-            .csrf(csrf -> csrf.disable()) // Tắt CSRF
+            .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
-                // Mở public các API đăng ký/đăng nhập
-                .requestMatchers("/api/auth/register",
-                                 "/api/auth/login",
-                                 "/api/auth/forgot-password",
-                                 "/api/auth/reset-password").permitAll()
-                // Mọi đường dẫn KHÁC đều phải được "xác thực"
+                // ✅ Allow preflight
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                // ✅ Allow all auth APIs
+                .requestMatchers("/api/auth/**").permitAll()
+
+                // Others require auth
                 .anyRequest().authenticated()
             )
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            )
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authenticationProvider(authenticationProvider());
 
         return http.build();
